@@ -44,23 +44,26 @@
 - [x] Maven parent POM — unified dependency management (SB 4.0.6, JDK 21, jjwt 0.12.6)
 - [x] `.dockerignore` — 55-line exclusion rules
 
-### S3：Dual-Platform CI/CD 🔵 Next
+### S3：Dual-Platform CI/CD ✅
 
-- [ ] Semgrep SAST rules and CI gate
-- [ ] Gitleaks pre-commit hook and CI gate
-- [ ] Trivy image scanning (hard gate: HIGH/CRITICAL blocked)
-- [ ] GitHub Actions full pipeline (lint → test → build → scan → notify)
-- [ ] `scripts/ci.sh` internal delivery automation
-- [ ] Feishu bot CI/CD notifications
-- [ ] Gitleaks block case study (intentional secret → blocked → fix → re-commit)
+- [x] Semgrep SAST rules and CI gate — `.semgrep.yml` + GitHub Actions semgrep job
+- [x] Gitleaks pre-commit hook and CI gate — `.pre-commit-config.yaml` + `.gitleaks.toml` + CI gitleaks job
+- [x] Trivy image scanning — CI hard gate (HIGH/CRITICAL) + `scripts/ci.sh` soft gate (NJU mirror for GFW)
+- [x] GitHub Actions full pipeline — 5 jobs: gitleaks → semgrep+test → build+trivy → feishu
+- [x] `scripts/ci.sh` internal delivery automation — 2026-06-07 harbor01 端到端验证通过（211s，4/4 Trivy 零高危，NJU 镜像 17s 拉 DB）
+- [x] Feishu bot CI/CD notifications — GitHub Actions notify job + ci.sh webhook
+- [x] Gitleaks block case study — `docs/29-gitleaks-blocking-case.md`（pre-commit 阻断 → 修复 → 重新提交全流程）
 
-### S4：Chaos Engineering & Load Testing ⚪ Planned
+### S4：Chaos Engineering & Load Testing 🔵 In Progress (Day 1 PM)
 
-- [ ] Scenario 1: OOMKilled — account-service memory exhaustion
-- [ ] Scenario 2: NetworkPolicy misconfiguration
-- [ ] Scenario 3: Jaeger slow-call root cause analysis
-- [ ] JMeter load test — 50/100/200 concurrent users
-- [ ] 3 postmortem documents
+- [x] JMeter load test — baseline 50/100/200 concurrent ✅（2545/3332/3637 成功）
+- [x] Preflight — test accounts (×10) + DB baseline backup + Jaeger fix + Grafana SLO 验证
+- [x] Extended load — 100/200 concurrent + HPA 扩容观察 + 冷启动死亡螺旋复盘 ✅
+- [x] Scenario 1: OOMKilled — 已删除。Spring Boot 4.0.6 + OTEL agent + JPA 启动 ≥320Mi，无法在 LimitRange 128Mi 和正常 512Mi 之间找到可 OOM 窗口。详见下文 ## OOMKilled 场景删除说明
+- [x] Scenario 2: NetworkPolicy — 切断 payment→account ingress ✅（故障注入 + `describe netpol` 排障 + 恢复, postmortem-02）
+- [x] Scenario 3: Jaeger trace — 5 服务 OTEL 注入验证，emptydir 修复三次崩溃，慢调用边界已记录 ✅（postmortem-03）
+- [x] DB cleanup — 备份恢复验证 ✅
+- [x] 压测复盘 — `docs/s4-load-test-postmortem.md` ✅
 
 ### S5：Polish & Packaging ⚪ Planned
 
@@ -87,6 +90,8 @@
 | Kyverno | Policy-as-code for compliance enforcement |
 | Velero | Scheduled backups + disaster recovery |
 | Redis | Hot data caching, distributed locking |
+| **Chaos Engineering — 真实 OOMKill 模拟** | S4 遗留技术遗憾：4 轮尝试证明 SB 4.0.6 无法通过降 memory limit 触发内核级 OOMKill。V2 引入 `@Profile("chaos")` 混沌控制器，利用 `-XX:MaxDirectMemorySize` 解除封印 + `ByteBuffer.allocateDirect()` 堆外攻击 + Heap dump 分析（MAT/jcmd）+ JVM GC 日志解读，形成完整内存排障体系 |
+| **JVM 可观测性增强** | `-XX:+HeapDumpOnOutOfMemoryError` + `-Xlog:gc*` + Grafana JVM Dashboard + jcmd 运行时诊断 |
 
 ---
 
@@ -100,7 +105,8 @@
 | Multi-master HA (current cluster) | Experimental 1-node control plane; HA topology documented in architecture design |
 | SonarQube | Semgrep covers the same SAST use case with zero deployment overhead |
 | Seata distributed transactions | Compensation logic + daily reconciliation more closely model real payment systems |
+| **OOMKilled 场景（S4）** | Spring Boot 4.0.6 + OTEL agent + JPA 启动最小可行内存 ~320Mi。LimitRange 强制最低 128Mi 但不允许设低值；设 128-256Mi 则 JVM 启动即退（0/1 循环），设 320Mi+ 则压测无法触发 OOM。**试图模拟 OOMKill 的 4 轮尝试全部失败：account-service 128Mi→JVM 退出、256Mi→liveness 超时、320Mi→能启动但压不崩；notification-service 128Mi→同样 0/1 循环。结论：Spring Boot 4.0.6 在生产级 K8s 环境中，OOMKill 通常发生在流量峰值或线程泄露阶段，无法通过单纯降 memory limit 复现。** 从 S4 正式移除。 |
 
 ---
 
-**Last updated**: 2026-06-04 | S2 Complete, S3 Next
+**Last updated**: 2026-06-07 | S3 Complete, S4 In Progress (Day 1 PM)
